<resources>
    <string name="app_name">calculator</string>
    <string name="numero">Número</string>
    <string name="symbolSum">+</string>
    <string name="symbolSubtraction">-</string>
    <string name="symbolMultiplication">X</string>
    <string name="symbolDivision">/</string>
    <string name="sybolEqual">=</string>
    <string name="resultado">Resultado</string>
    <string name="title">Calculadora</string>
    <string name="clear">Limpar</string>
    <string name="validation">Preencha todos os campos </string>
    <string name="operacaoInvalida">É impossivel dividir por zero </string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="impossivel_dividir_por_zero">É impossivel dividir por zero</string>
</resources>